Bug 305241 -  [Intro] Overlapped text and tab image corruption in RTL Intro pages

--- a/org.eclipse.ui.intro.universal/themes/slate/html/rtl.css
+++ b/org.eclipse.ui.intro.universal/themes/slate/html/rtl.css
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009 IBM Corporation and others.
+ * Copyright (c) 2009, 2010 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials 
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -55,6 +55,12 @@ table {
     display:block;
     left:0px;
     margin-right:0px;
+    position:static;
+    top:0px;
+}
+
+#page-content * a p {
+    margin-bottom:0px;
     position:static;
     top:0px;
 }
